updated code URL & fix

--- a/IPLScorePrediction.html
+++ b/IPLScorePrediction.html
@@ -73,7 +73,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <form action="#" method="post" class="appointment-form">
+                    <form id="prediction-form" action="#" method="post" class="appointment-form">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <select class="form-control" required>
+                                    <select class="form-control" id="toss-decision-select" required>
                                         <option value="" disabled selected>Toss Decision</option>
                                         <!-- Add toss decision options here -->
                                         <option value="bat">Bat</option>
