--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <!-- <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
+	           <li class="nav-item"><a href="#services-section" class="nav-link"><span>Certifications</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <!--<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li> -->
 			  	<li class="nav-item dropdown">
@@ -67,7 +67,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Sriram Chinnasamy</span></h1>
 			            <h2 class="mb-4">Automation Engineer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://www.linkedin.com/in/sriramc01/" class="btn btn-primary py-3 px-4">Hire me</a><a href="https://github.com/Sriram-5121/" class="btn btn-primary py-3 px-4">My Works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -78,14 +78,14 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/sid.png);background-size: 130%">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/sid2.png);background-size: 130%">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm a <span>Automation Engineer</span></h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://www.linkedin.com/in/sriramc01/" class="btn btn-primary py-3 px-4">Hire me</a><a href="https://github.com/Sriram-5121/" class="btn btn-primary py-3 px-4">My Works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -100,7 +100,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/sid2.png);">
 	    				</div>
     				</div>
     			</div>
@@ -122,10 +122,10 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="45+">0</span>
+	                <span class="number" data-number="45">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="Data/Siram Chinnasamy_RPA Developer Resume.pdf" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -188,11 +188,121 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="Data/Siram Chinnasamy_RPA Developer Resume.pdf" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
+
     			</div>
     		</div>
     	</div>
     </section>
+	<section class="ftco-section" id="services-section">
+  <div class="container">
+    <div class="row justify-content-center py-5 mt-5">
+      <div class="col-md-12 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Certifications</h1>
+        <h2 class="mb-4">My Certifications</h2>
+        <p>Credentials that validate my expertise in automation, data science, and more.</p>
+      </div>
+    </div>
+    <div class="row">
+
+      <!-- Certification 1 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/UiADP.jpg" target="_blank">
+            <img src="images/UiADP.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>UiPath Automation Developer Professional (UiADP)</h5>
+        </div>
+      </div>
+
+		<!-- Certification 2 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/UIARD.jpg" target="_blank">
+            <img src="images/UIARD.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>UiPath Advanced RPA Developer (UiARD)</h5>
+        </div>
+      </div>
+
+		<!-- Certification 3 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/DU.jpg" target="_blank">
+            <img src="images/DU.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>Document Understanding Training</h5>
+        </div>
+      </div>
+
+		<!-- Certification 4 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/AI_Center.jpg" target="_blank">
+            <img src="images/AI_Center.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>AI Center</h5>
+        </div>
+      </div>
+
+		<!-- Certification 5 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/Agile.jpg" target="_blank">
+            <img src="images/Agile.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>Safe Agile Certification</h5>
+        </div>
+      </div>
+
+		<!-- Certification 6 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/SPML-R.jpg" target="_blank">
+            <img src="images/SPML-R.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>Supervised Machine Learning: Regression</h5>
+        </div>
+      </div>
+
+		<!-- Certification 7 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/SPML-C.jpg" target="_blank">
+            <img src="images/SPML-C.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>Supervised Machine Learning: Classification</h5>
+        </div>
+      </div>
+
+			<!-- Certification 8 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/USVML.jpg" target="_blank">
+            <img src="images/USVML.jpg" alt="UiPath Advanced Developer" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>Unsupervised Machine Learning</h5>
+        </div>
+      </div>
+
+
+      <!-- Certification 9 -->
+      <div class="col-md-4 text-center d-flex ftco-animate">
+        <div class="services-1 shadow d-flex flex-column align-items-center p-3">
+          <a href="images/EDA.jpg" target="_blank">
+            <img src="images/EDA.jpg" alt="Machine Learning - Coursera" class="img-fluid mb-3" style="max-height: 200px;">
+          </a>
+          <h5>Exploratory Data Analysis</h5>
+        </div>
+      </div>
+
+
+
+      <!-- Add more blocks as needed -->
+    </div>
+  </div>
+</section>
+
 <!-- 
     <section class="ftco-section" id="services-section">
     	<div class="container">
@@ -613,7 +723,7 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/about.jpg);"></div>
+          	<div class="img" style="background-image: url(images/sid2.png);"></div>
           </div>
         </div>
       </div>
