--- a/JokeSender.html
+++ b/JokeSender.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Joke Sender - UiPath Job Trigger</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/ionicons.min.css">
+    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        /* Additional styling to fix overlapping issue */
+        .navbar-brand {
+            z-index: 2;
+            position: relative;
+        }
+        .main-heading {
+            margin-top: 120px; /* Adjust this value as needed */
+        }
+        .player-select {
+            height: 240px; /* Adjust height to show at least 10 players */
+        }
+    </style>
 </head>
-<body>
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+        <div class="container">
+            <!-- <a class="navbar-brand" href="#">IPL Score </a>
+            <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>-->
+
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav nav ml-auto">
+                    <li class="nav-item"><a href=index.html class="nav-link"><span>Home</span></a></li>
+	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+	           <li class="nav-item"><a href="#services-section" class="nav-link"><span>Certifications</span></a></li>
+	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+	          <!--<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li> -->
+			  	<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#projects-section" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Projects</span></a>
+					<div class="dropdown-menu" aria-labelledby="dropdown04">
+					<a class="dropdown-item" href=IPLScorePrediction.html>IPL Score Prediction</a>
+					<a class="dropdown-item" href=JokeSender.html>JokeSender</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
+                    <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 <section class="ftco-section">
   <div class="container text-center">
@@ -17,7 +71,20 @@
     <p id="job-status" style="margin-top: 20px; font-weight: bold;"></p>
   </div>
 </section>
+<script src="js/jquery.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/jquery.animateNumber.min.js"></script>
+  <script src="js/scrollax.min.js"></script>
 
+  <script src="js/main.js"></script>
 <script>
   async function runUiPathJob() {
     const statusElem = document.getElementById("job-status");
@@ -41,7 +108,9 @@
       statusElem.innerText = "❌ Error occurred while triggering job.";
     }
   }
-</script>
+  </script>
+  
+
 
 </body>
 </html>
