--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			  	<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#projects-section" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Projects</span></a>
 					<div class="dropdown-menu" aria-labelledby="dropdown04">
-					<a class="dropdown-item" href="IPLScorePrediction.html">IPL Score Prediction</a>
-					<a class="dropdown-item" href="classification.html">Classification</a>
+					<a class="dropdown-item" href=IPLScorePrediction.html>IPL Score Prediction</a>
+					<a class="dropdown-item" href=JokeSender.html>JokeSender</a>
 					</div>
 				</li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
@@ -122,8 +122,8 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="45">0</span>
-	                <span>Project complete</span>
+	                <span class="number" data-number="40">0</span>
+	                <span>Processes completed</span>
                 </p>
                 <p><a href="Data/Siram Chinnasamy_RPA Developer Resume.pdf" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
               </div>
@@ -405,9 +405,9 @@
 						<div class="progress-wrap ftco-animate">
 							<h3>SQL</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
+							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="55"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-							    <span>70%</span>
+							    <span>55%</span>
 							  	</div>
 							</div>
 						</div>
@@ -427,9 +427,9 @@
 						<div class="progress-wrap ftco-animate">
 							<h3>EDA & Data Analysis</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="50"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-							    <span>70%</span>
+							    <span>50%</span>
 							  	</div>
 							</div>
 						</div>
@@ -449,9 +449,9 @@
 						<div class="progress-wrap ftco-animate">
 							<h3>Azure</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="30"
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="20"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:30%">
-							    <span>30%</span>
+							    <span>20%</span>
 							  	</div>
 							</div>
 						</div>
@@ -466,17 +466,18 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Data science Projects</h2>
+            <h2 class="mb-4">Automations Projects</h2>
             <p>Turning ideas into data-driven solutions—one project at a time</p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+					<a href="JokeSender.html" class="project-link">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ha-ha-ha.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">IPLScorePrediction</a></h3>
-	    					<span>Regression Problem</span>
+	    					<h3><a href="JokeSender.html">Joke Sender</a></h3>
+	    					<span>Trigger UiPath Job</span>
 	    				</div>
     				</div>
   				</div>
