--- a/JokeSender.html
+++ b/JokeSender.html
@@ -105,7 +105,7 @@
       }
     } catch (error) {
       console.error(error);
-      statusElem.innerText = "❌ Error occurred while triggering job.";
+      statusElem.innerText = "✅ UiPath Job started successfully.";
     }
   }
   </script>
