--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					<div class="dropdown-menu" aria-labelledby="dropdown04">
 					<a class="dropdown-item" href=IPLScorePrediction.html>IPL Score Prediction</a>
 					<a class="dropdown-item" href=JokeSender.html>JokeSender</a>
+					<a class="dropdown-item" href=PurchaseOrderParser.html>PO Document Parser</a>
 					</div>
 				</li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
