--- a/IPLScorePrediction.html
+++ b/IPLScorePrediction.html
@@ -42,22 +42,22 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav nav ml-auto">
-                    <li class="nav-item"><a href=index.html class="nav-link"><span>Home</span></a></li>
-	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	           <li class="nav-item"><a href="#services-section" class="nav-link"><span>Certifications</span></a></li>
-	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
-	          <!--<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li> -->
-			  	<li class="nav-item dropdown">
+          <li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
+          <li class="nav-item"><a href="index.html#about-section" class="nav-link"><span>About</span></a></li>
+          <li class="nav-item"><a href="index.html#resume-section" class="nav-link"><span>Resume</span></a></li>
+          <li class="nav-item"><a href="index.html#services-section" class="nav-link"><span>Certifications</span></a></li>
+          <li class="nav-item"><a href="index.html#skills-section" class="nav-link"><span>Skills</span></a></li>
+          <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#projects-section" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Projects</span></a>
 					<div class="dropdown-menu" aria-labelledby="dropdown04">
 					<a class="dropdown-item" href=IPLScorePrediction.html>IPL Score Prediction</a>
 					<a class="dropdown-item" href=JokeSender.html>JokeSender</a>
-                        </div>
-                    </li>
-                    <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
-                    <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
-                </ul>
+					<a class="dropdown-item" href=PurchaseOrderParser.html>PO Document Parser</a>
+					</div>
+				</li>
+          <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
+          <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
+        </ul>
             </div>
         </div>
     </nav>
